# claude_agent_workflow

./: .env.example  .gitignore  CLAUDE.md  README.md  Warwick_AI_Agent_Data_Engineering.pptx  demo.md  pyproject.toml
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: pipeline_request.md
.github/workflows/: ci.yml  claude.yml
docker/: docker-compose.yml  init.sql
docs/: claude-agent-guide.md  docker-guide.md  getting-started.md  querying-data.md  troubleshooting.md
projects/aries-profile/: README.md
projects/aries-profile/docs/: ac-views-profile.md  aries-ecosystem.md
projects/dw-profiler/docs/: architecture.md
projects/mssql-mcp/: .env.example  README.md  pyproject.toml
projects/mssql-mcp/docs/: adding-tools.md  architecture.md  setup-guide.md
projects/mssql-mcp/src/mssql_mcp/: __init__.py  __main__.py  config.py  database.py  server.py  server_dbaries.py
projects/mssql-mcp/tests/: conftest.py  test_config.py  test_database.py  test_server.py
projects/prefect-etl/: .env.example  demo.md  pyproject.toml
projects/prefect-etl/docker/: 00-create-prefect-db.sh  docker-compose.yml  init.sql
projects/prefect-etl/docs/: getting-started.md  oklahoma-wells-data-model.md  querying-data.md  troubleshooting.md
projects/prefect-etl/tests/: conftest.py  test_earthquake_flow.py  test_extract.py  test_load.py  test_oklahoma_wells_flow.py  test_transform.py  (+1 more)
src/pipeline/: config.py
tests/: test_earthquake_flow.py  test_extract.py  test_load.py  test_occ_wells_flow.py  test_transform.py  test_weather_flow.py  test_well_transfers_flow.py
(+14 files in other folders)
